Bug 364425 - CSV import only shows checking accounts when selecting Banking
Summary: CSV import only shows checking accounts when selecting Banking
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 365802 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-17 17:20 UTC by Gerard Korsten
Modified: 2024-08-27 04:57 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerard Korsten 2016-06-17 17:20:59 UTC
On version 4.8.0

When importing banking accounts, I can only see checking accounts in the account selector. None of my Savings, Assests, Liability or Credit card accounts appear in the selection box.

This is with the CSV importer. 

I think it is related to commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4 where the option was to select created to show only investment accounts when the investment option was selected on the import dialog.

Reproducible: Always

Steps to Reproduce:
1. File -> Import -> CSV
2. Select Banking  and your profile
3. Select the file you wish to import and go through all the steps to import the file
3. On the screen where you need to select your account, you only see checking accounts

Actual Results:  
You only see checking accounts in the import accounts selector

Expected Results:  
All Assets, Liability, Credit Card and Savings accounts should appear
Comment 1 wojnilowicz 2016-06-18 17:23:32 UTC
Git commit 9c5397238947c8a010eb2e0939cb34d729dfb751 by Łukasz Wojniłowicz.
Committed on 18/06/2016 at 17:16.
Pushed by wojnilowicz into branch '4.8'.

Set type of banking statement to unknown during CSV import

Type of banking statement shouldn't be set to 'checkings' by default,
bacause statement to be imported could be 'checking' but also 'credit
card'.

M  +1    -2    kmymoney/plugins/csvimport/csvdialog.cpp

http://commits.kde.org/kmymoney/9c5397238947c8a010eb2e0939cb34d729dfb751
Comment 2 Cristian Oneț 2016-06-18 18:09:02 UTC
Git commit 93d5895375567fadc1e3ee40bbfc677adb50c84f by Cristian Oneț, on behalf of Łukasz Wojniłowicz.
Committed on 18/06/2016 at 18:08.
Pushed by conet into branch 'master'.

Set type of banking statement to unknown during CSV import

Type of banking statement shouldn't be set to 'checkings' by default,
bacause statement to be imported could be 'checking' but also 'credit
card'.
(cherry picked from commit 9c5397238947c8a010eb2e0939cb34d729dfb751)

M  +1    -2    kmymoney/plugins/csvimport/csvdialog.cpp

http://commits.kde.org/kmymoney/93d5895375567fadc1e3ee40bbfc677adb50c84f
Comment 3 wojnilowicz 2016-07-18 17:06:20 UTC
*** Bug 365802 has been marked as a duplicate of this bug. ***
Comment 4 Gerard Korsten 2016-07-21 08:52:18 UTC
I've tested the latest 4.8 Branch with the fix that was done here.

It only shows checking accounts and investment accounts.

It does not show : Asset, Liability, Credit Card, Savings or any of the other accounts anymore.
Comment 5 allan 2016-07-21 11:26:36 UTC
(In reply to NSLW from comment #1)
> Git commit 9c5397238947c8a010eb2e0939cb34d729dfb751 by Łukasz Wojniłowicz.
> Committed on 18/06/2016 at 17:16.
> Pushed by wojnilowicz into branch '4.8'.
> 
> Set type of banking statement to unknown during CSV import
> 
> Type of banking statement shouldn't be set to 'checkings' by default,
> bacause statement to be imported could be 'checking' but also 'credit
> card'.
> 
> M  +1    -2    kmymoney/plugins/csvimport/csvdialog.cpp
> 
> http://commits.kde.org/kmymoney/9c5397238947c8a010eb2e0939cb34d729dfb751

Credit card imports still do not work on 4.8.0.

The fix
"Thanks for the files. As I wrote before, CSV should be already fixed in upcoming KMM 4.8.1. Something is wrong with QIF importer in KMM, because file has correct type "!Type:CCard" and its account type is being incorrectly recognized. That needs to be fixed. As temporary fix you can use workaround provided by Allan Anderson https://mail.kde.org/pipermail/kmymoney-devel/2016-June/016810.html"
should be present in 4.8.1.
Comment 6 Ralf Habacker 2016-09-28 19:08:16 UTC
(In reply to Gerard Korsten from comment #0)
> I think it is related to commit bfa7b5ac37d2203e4a88d9ac73b1ec43ce5211b4
Can confirm, reverting this commit in git 4.8 branch brings back the missing accounts.
Comment 7 Ralf Habacker 2016-09-28 21:25:26 UTC
(In reply to Ralf Habacker from comment #6)
> Can confirm, reverting this commit in git 4.8 branch brings back the missing accounts.
I can confirm too that Lukasz fixed this issue with his patch in comment. I got the bug because I did run kmymoney from build dir which is not supported according to https://docs.kde.org/trunk5/en/extragear-office/kmymoney/installation.fromsource.html because kmymoney loads installed plugins instead the one from the current build dir. Using LD_LIBRARY_PATH or KDEDIRS did not help.
Comment 8 Jack 2016-09-28 21:30:43 UTC
Ralf - it is possible (but not easy) to run a newly compiled version of KMM.  I use a specific install prefix just for that purpose - I don't think it will work directly from the build dir since I'm not sure all the directories are in the (relative) expected location.  It involves setting some KDE env variables and running kbuildsycocaX where X is 4 or 5.  Actually, I have separate locations for 4 (4.8.0) and 5 (frameworks from master).  I'll be glad to post the script I use to the dev mailing list if there is interest.
Comment 9 Ralf Habacker 2016-09-29 07:37:50 UTC
(In reply to Jack from comment #8)
> I don't think it will work directly from the build dir
May be that the issue reported in comment 4 has been caused by the same reason as it looks to be build from git.
>  I'll be glad to post the script I use to the dev mailing list if there is interest.
Please, it is always good to be able to run a local build version beside the stable version.
Comment 10 Tony 2017-06-29 20:54:56 UTC
It has been over a year since the last release of KMyMoney and since this bug was reported. When will a new version with the fix be released?
Comment 11 Jack 2017-06-30 14:36:53 UTC
The team is working on releasing 4.8.1, but please remember we are all volunteers with real lives, so it never goes as fast as we want it to.  However, given the current efforts, it appears likely to be within another month or two.  Most of the developers efforts are going towards releasing version 5 (for KDE Frameworks) which will also include all the fixes for 4.8.1.