Set type of banking statement to unknown during CSV import

Type of banking statement shouldn't be set to 'checkings' by default,
bacause statement to be imported could be 'checking' but also 'credit
card'.

BUG: 364425
(cherry picked from commit 9c5397238947c8a010eb2e0939cb34d729dfb751)